--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="size-8 text-primary flex items-center justify-center">
 <span class="material-symbols-outlined text-3xl">spa</span>
 </div>
-<h2 class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-[-0.015em]">MindfulAI</h2>
+<h2 class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-[-0.015em]">Mannsaathii</h2>
 </div>
 <div class="hidden lg:flex flex-1 justify-end gap-8 items-center">
 <nav class="flex items-center gap-9">
